[package]
name = "r2u2webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
pyo3 = {version = "0.27.0", features = ["auto-initialize"]}
r2u2_core = {version = "4.1.0", features = ["aux_string_specs"]}
srfng = "1.0.1"
csv = "1.3.0"